Add how-to guide for node's test runner (#6770)
* Add how-to guide for node's test runner

Signed-off-by: Jacob Smith <3012099+JakobJingleheimer@users.noreply.github.com>

* adjust markdown to special flavour

Co-authored-by: Augustin Mauroy <augustin.mauroy@outlook.fr>
Signed-off-by: Jacob Smith <3012099+JakobJingleheimer@users.noreply.github.com>

* fix: code snippet

* chore(learn-content): add introduction for test-runner

* chore(navigation): add learn entry

* feedback on the formulation

Co-authored-by: Jacob Smith <3012099+JakobJingleheimer@users.noreply.github.com>
Signed-off-by: Augustin Mauroy <augustin.mauroy@outlook.fr>

* Update i18n/locales/en.json

Co-authored-by: Michael Esteban <mickel13@gmail.com>
Signed-off-by: Augustin Mauroy <augustin.mauroy@outlook.fr>

* Update navigation.json

Co-authored-by: Michael Esteban <mickel13@gmail.com>
Signed-off-by: Augustin Mauroy <augustin.mauroy@outlook.fr>

* fix grammar

Co-authored-by: Michael Esteban <mickel13@gmail.com>
Signed-off-by: Augustin Mauroy <augustin.mauroy@outlook.fr>

* fix: npm init command

---------

Signed-off-by: Jacob Smith <3012099+JakobJingleheimer@users.noreply.github.com>
Signed-off-by: Augustin Mauroy <augustin.mauroy@outlook.fr>
Co-authored-by: Augustin Mauroy <augustin.mauroy@outlook.fr>
Co-authored-by: Michael Esteban <mickel13@gmail.com>
Co-authored-by: Augustin Mauroy <97875033+AugustinMauroy@users.noreply.github.com>

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -97,6 +97,13 @@
             "poorPerformance": "Poor Performance",
             "flameGraphs": "Flame Graphs"
           }
+        },
+        "testRunner": {
+          "links": {
+            "testRunner": "Test Runner",
+            "introduction": "Discovering Node.js's test runner",
+            "usingTestRunner": "Using Node.js's test runner"
+          }
         }
       },
       "about": {
