--- a/i18n/config.json
+++ b/i18n/config.json
@@ -126,7 +126,7 @@
     "langDir": "ltr",
     "dateFormat": "MM.DD.YYYY",
     "hrefLang": "pt",
-    "enabled": false,
+    "enabled": true,
     "default": false
   },
   {
