--- a/i18n/config.json
+++ b/i18n/config.json
@@ -198,5 +198,15 @@
     "hrefLang": "pl",
     "enabled": false,
     "default": false
+  },
+  {
+    "code": "sv",
+    "localName": "Svenska",
+    "name": "Swedish",
+    "langDir": "ltr",
+    "dateFormat": "YYYY-MM-DD",
+    "hrefLang": "sv",
+    "enabled": false,
+    "default": false
   }
 ]
