chore(i18n): add Mongolian locale in config (#6541)
* chore(i18n): add Mongolian locale in config

* chore: clean up whitespace

Signed-off-by: Brian Muenzenmeyer <brian.muenzenmeyer@gmail.com>

---------

Signed-off-by: Brian Muenzenmeyer <brian.muenzenmeyer@gmail.com>
Co-authored-by: Brian Muenzenmeyer <brian.muenzenmeyer@gmail.com>

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -110,6 +110,16 @@
     "default": false
   },
   {
+    "code": "mn",
+    "localName": "Монгол",
+    "name": "Mongolian",
+    "langDir": "ltr",
+    "dateFormat": "YYYY.MM.DD",
+    "hrefLang": "mn",
+    "enabled": false,
+    "default": false
+  },
+  {
     "code": "pt-br",
     "localName": "Português do Brasil",
     "name": "Brazilian Portuguese",
