chore: add Uzbek lang to locales (#6563)
* chore: add Uzbek lang to locales

* fix order of lang

* fixed date format

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -180,6 +180,16 @@
     "default": false
   },
   {
+    "code": "uz",
+    "localName": "O'zbek",
+    "name": "Uzbek",
+    "langDir": "ltr",
+    "dateFormat": "DD.MM.YYYY",
+    "hrefLang": "uz",
+    "enabled": false,
+    "default": false
+  },
+  {
     "code": "zh-cn",
     "localName": "简体中文",
     "name": "Simplified Chinese",
