Add Hebrew language config (#6580)
locale: add hebrew support

Signed-off-by: Brian Muenzenmeyer <brian.muenzenmeyer@gmail.com>
Co-authored-by: João Gabriel Quaresma de Almeida <joaoGabriel55>
Co-authored-by: Brian Muenzenmeyer <brian.muenzenmeyer@gmail.com>

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -80,6 +80,16 @@
     "default": false
   },
   {
+    "code": "he",
+    "localName": "עִברִית",
+    "name": "Hebrew",
+    "langDir": "rtl",
+    "dateFormat": "DD-MM-YYYY",
+    "hrefLang": "he",
+    "enabled": false,
+    "default": false
+  },
+  {
     "code": "id",
     "localName": "Bahasa Indonesia",
     "name": "Indonesian",
