chore: Translation setup for: Swedish, Finnish, Dutch and Hindi (#6531)
* chore: Translation setup for: Swedish, Finnish, Dutch and Hindi

* fix whitespace

Signed-off-by: Brian Muenzenmeyer <brian.muenzenmeyer@gmail.com>

---------

Signed-off-by: Mateusz Stolarczyk <92862370+MateuszS0@users.noreply.github.com>
Signed-off-by: Brian Muenzenmeyer <brian.muenzenmeyer@gmail.com>
Co-authored-by: Brian Muenzenmeyer <brian.muenzenmeyer@gmail.com>

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -70,6 +70,16 @@
     "default": false
   },
   {
+    "code": "fi",
+    "localName": "Suomi",
+    "name": "Finnish",
+    "langDir": "ltr",
+    "dateFormat": "DD.MM.YYYY",
+    "hrefLang": "fi",
+    "enabled": false,
+    "default": false
+  },
+  {
     "code": "fr",
     "localName": "Français",
     "name": "French",
@@ -156,6 +166,16 @@
     "langDir": "ltr",
     "dateFormat": "YYYY.MM.DD",
     "hrefLang": "mn",
+    "enabled": false,
+    "default": false
+  },
+  {
+    "code": "nl",
+    "localName": "Nederlands",
+    "name": "Dutch",
+    "langDir": "ltr",
+    "dateFormat": "DD-MM-YYYY",
+    "hrefLang": "nl",
     "enabled": false,
     "default": false
   },
