enable simplified chinese
Signed-off-by: Brian Muenzenmeyer <brian.muenzenmeyer@gmail.com>

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -276,7 +276,7 @@
     "langDir": "ltr",
     "dateFormat": "YYYY/MM/DD",
     "hrefLang": "zh-Hans",
-    "enabled": false,
+    "enabled": true,
     "default": false
   },
   {
