fix: do not translate OpenJS trademark

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -6,8 +6,7 @@
           "trademarkPolicy": "Trademark Policy",
           "privacyPolicy": "Privacy Policy",
           "codeOfConduct": "Code of Conduct",
-          "security": "Security Policy",
-          "openJS": "OpenJS Foundation"
+          "security": "Security Policy"
         }
       },
       "navBar": {
