--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -6,8 +6,7 @@
           "trademarkPolicy": "Politique de Marque",
           "privacyPolicy": "Politique de confidentialité",
           "codeOfConduct": "Code de conduite",
-          "security": "Politique de sécurité",
-          "openJS": "OpenJS Foundation"
+          "security": "Politique de sécurité"
         }
       },
       "navBar": {
