--- a/i18n/locales/pt.json
+++ b/i18n/locales/pt.json
@@ -6,8 +6,7 @@
           "trademarkPolicy": "Política da Marca Comercial",
           "privacyPolicy": "Política de Privacidade",
           "codeOfConduct": "Código de Conduta",
-          "security": "Política de Segurança",
-          "openJS": "Fundação OpenJS"
+          "security": "Política de Segurança"
         }
       },
       "navBar": {
