chore(internationalization): Add Russian language to Home page

--- a/i18n/config.json
+++ b/i18n/config.json
@@ -226,7 +226,7 @@
     "langDir": "ltr",
     "dateFormat": "DD.MM.YYYY",
     "hrefLang": "ru",
-    "enabled": false,
+    "enabled": true,
     "default": false
   },
   {
