--- a/apps/site/pages/en/download/prebuilt-binaries/index.mdx
+++ b/apps/site/pages/en/download/prebuilt-binaries/index.mdx
@@ -13,12 +13,12 @@ I want the <Release.VersionDropdown /> version of Node.js for <Release.Operating
 <section>
 Node.js includes <Release.NpmLink />.
 
-Read the changelog for <Release.ChangelogLink>this version</Release.ChangelogLink>
+Read the changelog for <Release.ChangelogLink>this version</Release.ChangelogLink>.
 
-Read the blog post for <Release.BlogPostLink>this version</Release.BlogPostLink>
+Read the blog post for <Release.BlogPostLink>this version</Release.BlogPostLink>.
 
-Learn how to <Release.VerifyingBinariesLink>verify signed SHASUMS</Release.VerifyingBinariesLink>
+Learn how to <Release.VerifyingBinariesLink>verify signed SHASUMS</Release.VerifyingBinariesLink>.
 
-Check out <LinkWithArrow href="https://nodejs.org/download/nightly/">Nightly</LinkWithArrow> prebuilt binaries or <LinkWithArrow href="https://unofficial-builds.nodejs.org/download/">Unofficial Builds</LinkWithArrow> for other platforms
+Check out <LinkWithArrow href="https://nodejs.org/download/nightly/">Nightly</LinkWithArrow> prebuilt binaries, all <LinkWithArrow href="https://nodejs.org/download/release/">Release</LinkWithArrow> prebuilt binaries, or <LinkWithArrow href="https://unofficial-builds.nodejs.org/download/">Unofficial Builds</LinkWithArrow> for other platforms.
 
 </section>
