feat(i18n): enables indonesian

--- a/apps/site/i18n/config.json
+++ b/apps/site/i18n/config.json
@@ -116,7 +116,7 @@
     "langDir": "ltr",
     "dateFormat": "DD.MM.YYYY",
     "hrefLang": "id",
-    "enabled": false,
+    "enabled": true,
     "default": false
   },
   {
