chore(i18n): added ur-PK in the config

--- a/apps/site/i18n/config.json
+++ b/apps/site/i18n/config.json
@@ -270,6 +270,16 @@
     "default": false
   },
   {
+    "code": "ur-PK",
+    "localName": "اردو (پاکستان)",
+    "name": "Urdu (Pakistan)",
+    "langDir": "rtl",
+    "dateFormat": "DD/MM/YYYY",
+    "hrefLang": "ur-PK",
+    "enabled": false,
+    "default": false
+  },
+  {
     "code": "uz",
     "localName": "O'zbek",
     "name": "Uzbek",
