--- a/apps/site/i18n/config.json
+++ b/apps/site/i18n/config.json
@@ -260,6 +260,16 @@
     "default": false
   },
   {
+    "code": "ur",
+    "localName": "اردو",
+    "name": "Urdu",
+    "langDir": "rtl",
+    "dateFormat": "DD/MM/YYYY",
+    "hrefLang": "ur",
+    "enabled": false,
+    "default": false
+  },
+  {
     "code": "uz",
     "localName": "O'zbek",
     "name": "Uzbek",
