doc: fix the fnm docs for a functional instruction guide
Before the change: when the commands were copy&paste (followed to the letter) they wouldn't work and users wouldn't have a functional node or npm binary

After the change: correct the instructions so that the fnm library is first sourced from the bash shell to activate it into the path which allows to use fnm as an executable and run node and npm binaries too.

Signed-off-by: Liran Tal <liran.tal@gmail.com>

--- a/apps/site/i18n/locales/en.json
+++ b/apps/site/i18n/locales/en.json
@@ -300,6 +300,7 @@
         "shouldPrint": "should print `{version}`",
         "installsFnm": "installs fnm (Fast Node Manager)",
         "downloadAndInstallNodejs": "download and install Node.js",
+        "activateFNM": "activate fnm",
         "noteWithColon": "NOTE:",
         "dockerIsNotNodejsPackageManager": "Docker is not a Node.js package manager.",
         "PleaseEndureAlreadyInstallOnSystem": "Please ensure it is already installed on your system.",
