chore: Add serbian language config

--- a/apps/site/i18n/config.json
+++ b/apps/site/i18n/config.json
@@ -230,6 +230,16 @@
     "default": false
   },
   {
+    "code": "sr",
+    "localName": "Srpski",
+    "name": "Serbian",
+    "langDir": "ltr",
+    "dateFormat": "DD.MM.YYYY",
+    "hrefLang": "sr",
+    "enabled": false,
+    "default": false
+  },
+  {
     "code": "sv",
     "localName": "Svenska",
     "name": "Swedish",
