fixup! Blog: v22.5.0 release post

--- a/apps/site/pages/en/blog/release/v22.5.0.md
+++ b/apps/site/pages/en/blog/release/v22.5.0.md
@@ -160,7 +160,7 @@ author: Antoine du Hamel
 - \[[`22ca334090`](https://github.com/nodejs/node/commit/22ca334090)] - **(SEMVER-MINOR)** **worker**: add postMessageToThread (Paolo Insogna) [#53682](https://github.com/nodejs/node/pull/53682)
 - \[[`5aecbefbd5`](https://github.com/nodejs/node/commit/5aecbefbd5)] - **worker**: allow copied NODE_OPTIONS in the env setting (Joyee Cheung) [#53596](https://github.com/nodejs/node/pull/53596)
 
-Windows 32-bit Installer: _Coming soon_ \
+Windows 32-bit Installer: https://nodejs.org/dist/v22.5.0/node-v22.5.0-x86.msi \
 Windows 64-bit Installer: https://nodejs.org/dist/v22.5.0/node-v22.5.0-x64.msi \
 Windows ARM 64-bit Installer: https://nodejs.org/dist/v22.5.0/node-v22.5.0-arm64.msi \
 Windows 32-bit Binary: https://nodejs.org/dist/v22.5.0/win-x86/node.exe \
