fix(blog): update "Coming soon" links

--- a/apps/site/pages/en/blog/release/v18.18.0.md
+++ b/apps/site/pages/en/blog/release/v18.18.0.md
@@ -192,7 +192,7 @@ author: Ruy Adorno
 Windows 32-bit Installer: https://nodejs.org/dist/v18.18.0/node-v18.18.0-x86.msi \
 Windows 64-bit Installer: https://nodejs.org/dist/v18.18.0/node-v18.18.0-x64.msi \
 Windows 32-bit Binary: https://nodejs.org/dist/v18.18.0/win-x86/node.exe \
-Windows 64-bit Binary: _Coming soon_ \
+Windows 64-bit Binary: https://nodejs.org/dist/v18.18.0/win-x64/node.exe \
 macOS 64-bit Installer: https://nodejs.org/dist/v18.18.0/node-v18.18.0.pkg \
 macOS Apple Silicon 64-bit Binary: https://nodejs.org/dist/v18.18.0/node-v18.18.0-darwin-arm64.tar.gz \
 macOS Intel 64-bit Binary: https://nodejs.org/dist/v18.18.0/node-v18.18.0-darwin-x64.tar.gz \
