--- a/apps/site/pages/en/blog/release/v18.17.0.md
+++ b/apps/site/pages/en/blog/release/v18.17.0.md
@@ -570,7 +570,7 @@ macOS Apple Silicon 64-bit Binary: https://nodejs.org/dist/v18.17.0/node-v18.17.
 macOS Intel 64-bit Binary: https://nodejs.org/dist/v18.17.0/node-v18.17.0-darwin-x64.tar.gz \
 Linux 64-bit Binary: https://nodejs.org/dist/v18.17.0/node-v18.17.0-linux-x64.tar.xz \
 Linux PPC LE 64-bit Binary: https://nodejs.org/dist/v18.17.0/node-v18.17.0-linux-ppc64le.tar.xz \
-Linux s390x 64-bit Binary: _Coming soon_ \
+Linux s390x 64-bit Binary: https://nodejs.org/dist/v18.17.0/node-v18.17.0-linux-s390x.tar.xz \
 AIX 64-bit Binary: https://nodejs.org/dist/v18.17.0/node-v18.17.0-aix-ppc64.tar.gz \
 ARMv7 32-bit Binary: https://nodejs.org/dist/v18.17.0/node-v18.17.0-linux-armv7l.tar.xz \
 ARMv8 64-bit Binary: https://nodejs.org/dist/v18.17.0/node-v18.17.0-linux-arm64.tar.xz \
