--- a/apps/site/pages/en/blog/release/v20.15.1.md
+++ b/apps/site/pages/en/blog/release/v20.15.1.md
@@ -40,9 +40,9 @@ Linux 64-bit Binary: https://nodejs.org/dist/v20.15.1/node-v20.15.1-linux-x64.ta
 Linux PPC LE 64-bit Binary: https://nodejs.org/dist/v20.15.1/node-v20.15.1-linux-ppc64le.tar.xz \
 Linux s390x 64-bit Binary: https://nodejs.org/dist/v20.15.1/node-v20.15.1-linux-s390x.tar.xz \
 AIX 64-bit Binary: https://nodejs.org/dist/v20.15.1/node-v20.15.1-aix-ppc64.tar.gz \
-ARMv7 32-bit Binary: _Coming soon_ \
+ARMv7 32-bit Binary: https://nodejs.org/dist/v20.15.1/node-v20.15.1-linux-armv7l.tar.xz \
 ARMv8 64-bit Binary: https://nodejs.org/dist/v20.15.1/node-v20.15.1-linux-arm64.tar.xz \
-Source Code: _Coming soon_ \
+Source Code: https://nodejs.org/dist/v20.15.1/node-v20.15.1.tar.gz \
 Other release files: https://nodejs.org/dist/v20.15.1/ \
 Documentation: https://nodejs.org/docs/v20.15.1/api/
 
