content(learn): update ressources about typescript

--- a/apps/site/i18n/locales/en.json
+++ b/apps/site/i18n/locales/en.json
@@ -42,6 +42,15 @@
             "securityBestPractices": "Security Best Practices"
           }
         },
+        "typescript": {
+          "links": {
+            "typescript": "TypeScript",
+            "introduction": "Introduction to TypeScript",
+            "transpile": "Running TypeScript code using transpilation",
+            "run": "Running TypeScript with a runner",
+            "runNatively": "Running TypeScript with a Node.js Itself"
+          }
+        },
         "asynchronousWork": {
           "links": {
             "asynchronousWork": "Asynchronous Work",
