feat:improve-fnm-download-instructions (#6946)
* feat:improve-fnm-download-instructions

* Update apps/site/i18n/locales/en.json

Co-authored-by: Michael Esteban <mickel13@gmail.com>
Signed-off-by: Sujit Ale Magar <128675355+Sujitale07@users.noreply.github.com>

---------

Signed-off-by: Sujit Ale Magar <128675355+Sujitale07@users.noreply.github.com>
Co-authored-by: Michael Esteban <mickel13@gmail.com>

--- a/apps/site/i18n/locales/en.json
+++ b/apps/site/i18n/locales/en.json
@@ -290,6 +290,7 @@
         "platform": "Platform"
       },
       "codeBox": {
+        "fnmEnvSetup": "configure fnm environment",
         "systemManagerWarning": "is not a Node.js package manager. Please ensure you already have {packageManager} installed.",
         "communityWarning": "Package managers and their installation scripts are not maintained by the Node.js project.",
         "communityWarningReport": "If you encounter issues, please reach out to the package manager's maintainers.",
