feat: enable zh-tw

--- a/apps/site/i18n/config.json
+++ b/apps/site/i18n/config.json
@@ -306,7 +306,7 @@
     "langDir": "ltr",
     "dateFormat": "YYYY/MM/DD",
     "hrefLang": "zh-Hant",
-    "enabled": false,
+    "enabled": true,
     "default": false
   }
 ]
