--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -6,6 +6,10 @@
       "types": "./src/index.d.ts",
       "default": "./dist/index.js"
     },
+    "./types": {
+      "types": "./src/types.d.ts",
+      "default": "./dist/types.js"
+    },
     "./config.json": "./dist/config.json",
     "./locales/en.json": "./locales/en.json"
   },
