chore: set up lint

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -15,12 +15,19 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "lint:js": "eslint src/**/*.ts --cache --cache-strategy=content --cache-location=.eslintjscache"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
     "typescript": "~5.5.3"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0"
   }
 }
