feat(i18n): enables ukrainian

--- a/apps/site/i18n/config.json
+++ b/apps/site/i18n/config.json
@@ -266,7 +266,7 @@
     "langDir": "ltr",
     "dateFormat": "DD.MM.YYYY",
     "hrefLang": "uk",
-    "enabled": false,
+    "enabled": true,
     "default": false
   },
   {
