--- a/packages/i18n/tsconfig.json
+++ b/packages/i18n/tsconfig.json
@@ -6,30 +6,16 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
     "incremental": true,
     "paths": { "@/*": ["./*"] },
-    "plugins": [{ "name": "next" }],
-    "baseUrl": "."
+    "baseUrl": ".",
+    "outDir": "dist"
   },
-  "mdx": {
-    "checkMdx": true
-  },
-  "include": [
-    "next-env.d.ts",
-    "**/*.mdx",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    ".storybook/**/*.ts",
-    ".storybook/**/*.tsx",
-    "build/types/**/*.ts"
-  ],
-  "exclude": ["node_modules", ".next"]
+  "include": ["lib", "types.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
